# wasm-ip-geolocation

./: .gitignore  Cargo.toml  README.md  build.sh  index.html
pkg/: ip_geolocation.d.ts  ip_geolocation.js  ip_geolocation_bg.wasm  ip_geolocation_bg.wasm.d.ts
src/: lib.rs
